# debate_utils

./: README.md  pyproject.toml
src/debate_utils/: card_embeddings.py  card_retreival.py
src/debate_utils/cli/: dedup.py  embed_all_taglines.py  upload.py
src/debate_utils/models/: __init__.py  card.py
